# ComfyUI-faster-whisper

./: __init__.py  pyproject.toml  requirements.txt
workflows/: ARENA_VOICE_CLONING.json
