[project]
name = "comfyui-fast-whisper"
description = "ComfyUI node for fast-whisper transcription"
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["faster-whisper==1.0.3", "soundfile","numpy"]

[project.urls]
Repository = "https://github.com/ai-joe-git/ComfyUI-faster-whisper"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "ai-joe-git"
DisplayName = "ComfyUI-fast-whisper"
Icon = ""
